Closed
Bug 603865
Opened 15 years ago
Closed 15 years ago
Revive AOT compiler
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tamarin Graveyard
Virtual Machine
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: alexmac, Unassigned)
Details
(Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey, fixed-in-tamarin)
Attachments
(1 file, 1 obsolete file)
|
17.10 KB,
patch
|
stejohns
:
review+
rreitmai
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_4; en-us) AppleWebKit/533.18.1 (KHTML, like Gecko) Version/5.0.2 Safari/533.18.5
Build Identifier:
Changes to the VM since we stopped working on the AOT compiler have caused it to bitrot, this patch fixes those issues. It's mostly minor tweaks, the only interesting changes that affected us was some refactoring to the way activation traits get hooked up and the where the native method thunker is stored.
Reproducible: Always
| Reporter | ||
Comment 1•15 years ago
|
||
Attachment #482776 -
Flags: review?(stejohns)
Comment 2•15 years ago
|
||
Comment on attachment 482776 [details] [diff] [review]
Revive AOT patch
Adding Rick to review the nanojit changes (which are trivial but would need to be pushed separately)
Attachment #482776 -
Flags: review?(stejohns)
Attachment #482776 -
Flags: review?(rreitmai)
Attachment #482776 -
Flags: review+
Comment 3•15 years ago
|
||
Comment on attachment 482776 [details] [diff] [review]
Revive AOT patch
pushed NJ change : http://hg.mozilla.org/projects/nanojit-central/rev/1cdb89db3ab9
Attachment #482776 -
Flags: review?(rreitmai) → review+
Updated•15 years ago
|
Whiteboard: fixed-in-nanojit
Comment 4•15 years ago
|
||
Whiteboard: fixed-in-nanojit → fixed-in-nanojit, fixed-in-tracemonkey
Comment 5•15 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 6•15 years ago
|
||
Fixed compilation of pre-built abcs - with the .abc_ extension. Also excluded more tests from AOT build.
Attachment #485101 -
Flags: superreview?
Attachment #485101 -
Flags: review?(stejohns)
Comment 7•15 years ago
|
||
(In reply to comment #6)
> Created attachment 485101 [details] [diff] [review]
> Fixed and excluded a few AOT tests
>
> Fixed compilation of pre-built abcs - with the .abc_ extension. Also excluded
> more tests from AOT build.
Please file this as a separate bug. Filing a new bug is cheap, and having one patch per bug makes tracking and merging easier. This is doubly true when the bug is already RESOLVED FIXED when a second patch is attached.
Comment 8•15 years ago
|
||
Comment on attachment 485101 [details] [diff] [review]
Fixed and excluded a few AOT tests
Looks OK to me, adding cpeyer
Attachment #485101 -
Flags: review?(stejohns)
Attachment #485101 -
Flags: review?(cpeyer)
Attachment #485101 -
Flags: review+
Comment 9•15 years ago
|
||
Comment on attachment 485101 [details] [diff] [review]
Fixed and excluded a few AOT tests
> + precompiledExt = ".abc_"
Should move abcOnlyExt (which defines the same string) from acceptance/runtests.py to runtestBase instead of defining a new var
For the code block in compileWithAsh:
> + settings = self.getLocalSettings(testdir)
should be prefaced with a if self.aotsdk: check so that the code is only run then.
Is aot only run with --rebuildtests and without the pexpect module installed? Because that is the only way that this code will be run.
Attachment #485101 -
Flags: review?(cpeyer) → review-
| Reporter | ||
Comment 10•15 years ago
|
||
I've filed a separate bug with fixed version of David's patch here 606738. David when you get a chance can you mark the patch you attached here as obsolete?
(In reply to comment #9)
> Is aot only run with --rebuildtests and without the pexpect module installed?
yes, because of the way AOT works a change in the runtime requires a recompilation of every test.
Comment 11•15 years ago
|
||
Comment on attachment 485101 [details] [diff] [review]
Fixed and excluded a few AOT tests
Marking as obsolete. Problem now tracked in https://bugzilla.mozilla.org/show_bug.cgi?id=606738
Attachment #485101 -
Attachment is obsolete: true
Attachment #485101 -
Flags: superreview?
Comment 12•15 years ago
|
||
TR 5389:e973f9660ad1
Comment 13•15 years ago
|
||
nanojit-change : http://hg.mozilla.org/tamarin-redux/rev/a7313158044c
Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey → fixed-in-nanojit, fixed-in-tracemonkey, fixed-in-tamarin
You need to log in
before you can comment on or make changes to this bug.
Description
•