Bug 603865 - "Revive AOT compiler" [r+r=stejohns]

--HG--
extra : convert_revision : 1cdb89db3ab910033e208fb66cfeb074cd1bca2a